--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ html, body{
     box-sizing: border-box;
     outline: none;
     -webkit-tap-highlight-color: transparent;
+    cursor: none;
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 #main{
@@ -28,7 +31,7 @@ h1{
     right: 0;
     margin: auto;
     z-index: 99;
-    color: #000;
+    color: #fff;
     text-align: center;
     font-size: 3.6em;
     mix-blend-mode: overlay;
@@ -37,6 +40,7 @@ h1{
 
 .content{
     width: 90%;
+    color: #fff;
     position: absolute;
     bottom: 20px;
     text-align: center;;
@@ -53,7 +57,7 @@ h1{
 .content span{
     width: auto;
     height: auto;
-    border: 1px solid #222;
+    border: 1px solid #fff;
     display: inline-block;
     border-radius: 3px;
     padding: 0px 10px;
@@ -81,3 +85,53 @@ h1{
 .buttons button.next{
     transform: scaleY(-1);
 }
+
+.buttons button.next:active{
+    transform: scaleY(-1) translateY(8px);
+}
+.buttons button.prev:active{
+    transform: translateY(8px);
+}
+#main .part{
+    flex: 1;
+}
+
+#main .part .section{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+
+#main .part .section img{
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: absolute;
+    left: var(--x);
+    pointer-events: none;
+}
+
+.cursor{
+    width: var(--size);
+    height: var(--size);
+    border-radius: 50%;
+    background-color: #fff;
+    position: absolute;
+    z-index: 999;
+    pointer-events: none;
+    mix-blend-mode: difference;
+}
+cursor-f{
+    width: var(--size);
+    height: var(--size);
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-image: url(images/cursor-round.png);
+    background-size: cover;
+    mix-blend-mode: difference;
+    pointer-events: none;
+    opacity: 0.5;
+}
+
